Revision history for Gimp-Perl extension.

	- updated seths scripts, added remove_guides...
        - examples/glowing_steel was missing from the MANIFEST!!
        - data types for RADIO, SPINNER etc.. are guessed better now.
        - added examples/guides_to_selection.
        - added examples/burst, without even looking at it ;)
        
1.1   Fri Jul 30 07:37:30 CEST 1999
	- one of the most successful releases, in terms of features & bugfixes.
        - it was also a long night. And expensive (irc).
        - renamed gimp_drawable_mask to gimp_drawable_bounds to avoid clashes.
	- new enums.pl, some changes: SELECTION_* becomes * again.
        - compatibility fix for 5.005_58, also fixed a bug in Gimp::Pod.
        - removed register_magic_load_handler from Lib.xs (is in PDB).
        - preliminary <Load> and <Save> support (arguments are automatically
          supplied).
        - enabled limited pixel access functions even when PDL was not found,
          just enough to re-enable magick and implement miff.
        - implemented and added examples/miff (a load/save filter for miff
          images).
        - close DATA in Gimp unconditionally, saves one open filehandle.
        - fixed the longstanding preview bug in Gimp::UI by reversing the
          order of calls to draw_row. => something in gtk+ is really broken.
        - fixed a longstanding (but never seen ;) bug in old_pdl: pdls that
          were not sever'ed created garbage.
        - allow dummy dimension in grayscale pdls, i.e. pdl(1,width,height)
          instead of pdl(width,height).
        - improved gimpdoc & pixelmap.
        - removed debugging code from gouge. ouch!
        - bug fixed: PDL::Core was not automatically required when not
          already loaded.
        - passing undef as PARAM_STRING passes a zero pointer in install_proc.
          Required for load handlers. Ugh.
        - fixed typoe in Parasite::is_persistent and implement "new" method.