@@ -48,8 +48,6 @@ am not responsible for your data-loss!
 
 None ;)
 
-=back
-
 =head1 AUTHOR
 
 Marc Lehmann <pcg@goof.com>
