@@ -9,7 +9,7 @@ register	"center_guide",
 		"Claes G Lindblad <claesg\@algonet.se>",
 		"Claes G Lindblad",
 		"990323",
-		"<Image>/Center Guide",
+		"<Image>/Guides/Center Guide",
 		"*",
 		[
 		[PF_RADIO,
